feat(TPSVC-19292): update to Java 17